objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>CheckIn_Time__c</fullName>
        <label>CheckIn Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOut_time__c</fullName>
        <label>CheckOut time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee ID</label>
        <referenceTo>Employee_Details__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attendance</label>
    <nameField>
        <label>Attendance  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>